--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <!-- Dedicatoria -->
   <div class="dedicatoria">
-    <h1>🌻 Para Ti</h1>
+    <h1>🌻 BRENDICHISSSSS, PARA TI</h1>
     <p>Haz clic en el botón para hacer florecer girasoles<br> y llenar tu día de luz y alegría 🌻</p>
     <button onclick="crearGirasol()">🌻 Generar Girasol</button>
   </div>
